--- a/Task/Task.csproj
+++ b/Task/Task.csproj
@@ -58,11 +58,12 @@
     <Compile Include="Account.cs" />
     <Compile Include="ActionNotifications.cs" />
     <Compile Include="Bank.cs" />
+    <Compile Include="BankExtension.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Pages\TransferPage.xaml.cs">
       <DependentUpon>TransferPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Repository.cs" />
+    <Compile Include="VariableExtension.cs" />
     <Page Include="Pages\NewAccountPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -140,6 +141,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RepositoryLibrary\RepositoryLibrary.csproj">
+      <Project>{8789641e-666f-47a1-8075-62c9a8b0288f}</Project>
+      <Name>RepositoryLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
